adding namespace def

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,8 @@ export(add_shiny)
 export(renderSunburst)
 export(sunburst)
 export(sunburstOutput)
+export(breadcrumbs)
+export(breadcrumbsOutput)
+export(renderBreadcrumbs)
 import(htmltools)
 import(htmlwidgets)
